provarAnt/00D190000000ZY2EAM/objects/et4ae5__Triggered_Send_Execution__c.object
<CustomObject>
    <description>Stores information about triggered send executions such as scheduled time and status.</description>
    <fields>
        <fullName>et4ae5__Business_Unit_ID__c</fullName>
        <label>Business Unit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__RecipientId__c</fullName>
        <label>RecipientId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retry Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requeued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>et4ae5__Triggered_Send__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Triggered Send</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Trggered Send must be active in order to be selected.</errorMessage>
            <filterItems>
                <field>et4ae5__Automated_Send__c.et4ae5__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>et4ae5__Automated_Send__c</referenceTo>
        <relationshipLabel>Triggered Send Executions</relationshipLabel>
        <relationshipName>Triggered_Send_Executions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Triggered Send Execution</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Triggered Send Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triggered Send Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>